<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchCompanyActivity"
    android:orientation="vertical"
    android:background="#FAD8F1"
    >

    <Button
        android:id="@+id/google_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="googleSearch"
        android:text="@string/google_search"/>
    <Button
        android:id="@+id/map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="mapSearch"
        android:text="@string/map"/>



//////////////alarm///////////////////
    <TextView
        android:id="@+id/alarm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_alarm_title"/>

    <EditText
        android:id="@+id/alarm_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here" />

    <TextView
        android:id="@+id/alarm_hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_hour"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/alarm_hout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here" />
    <TextView
        android:id="@+id/alarm_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_minute" />

    <EditText
        android:id="@+id/alarm_min_text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/type_here"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="setAlarm"
        android:text="@string/set_alarm"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:onClick="goToSetActivity"
        android:text="@string/next"/>


</LinearLayout>